# whisper

./: .gitignore  README.md  config.toml  pyproject.toml  whisper
src/whisper_app/: __init__.py  __main__.py  app.py  asr.py  audio.py  config.py  device.py  hotkey.py  overlay.py  paste.py  paths.py
