[project]
name = "whisper"
version = "0.1.0"
description = "Offline speech-to-text overlay for Linux (Parakeet TDT)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "torch",
  "torchaudio",
  "transformers>=4.53.0",
  "accelerate",
  "sounddevice",
  "numpy",
  "soundfile",
  "tomli>=2.0.0; python_version < '3.11'",
  "PySide6>=6.6",
  "evdev",
  "huggingface_hub",
]

[project.scripts]
whisper = "whisper_app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_app"]

[tool.uv]
# Prefer CUDA wheels on NVIDIA systems when available.
package = true
